@startuml
package "Product Service" {
    class Product {
        +Long id
        +String name
        +String description
        +String sku
        +Category category
        +Brand brand
        +Set<ProductImage> images
        +Set<ProductVariant> variants
        +Set<ProductAttribute> attributes
        +Set<ProductReview> reviews
        +LocalDateTime createdAt
        +LocalDateTime updatedAt
    }

    class Category {
        +Long id
        +String name
        +String description
        +Category parentCategory
        +Set<Category> subCategories
    }

    class Brand {
        +Long id
        +String name
        +String description
        +String logoUrl
    }

    class ProductImage {
        +Long id
        +String imageUrl
        +boolean isPrimary
    }

    class ProductVariant {
        +Long id
        +String variantName
        +Price price
        +int stockQuantity
        +Set<ProductAttribute> attributes
    }

    class ProductAttribute {
        +Long id
        +String key
        +String value
    }

    class ProductReview {
        +Long id
        +int rating
        +String comment
        +UserDetail user
        +LocalDateTime createdAt
    }

    class Price {
        +Long id
        +double amount
        +String currency
        +LocalDateTime effectiveDate
    }

    class UserDetail {
        +Long id
        +String username
        +String email
    }

    ' Relationships
    Product "1" *-- "1" Category : belongs to
    Product "1" *-- "1" Brand : belongs to
    Product "1" *-- "0..*" ProductImage : has
    Product "1" *-- "0..*" ProductVariant : has
    Product "1" *-- "0..*" ProductAttribute : has
    Product "1" *-- "0..*" ProductReview : has
    ProductVariant "1" *-- "1" Price : has
    ProductVariant "1" *-- "0..*" ProductAttribute : has
    Category "1" *-- "0..*" Category : parent-sub relationship
    ProductReview "1" *-- "1" UserDetail : created by
}
@enduml